Address URL constructor deprecations